--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.elasticsearch:elasticsearch:1.3.4'
     compile 'org.xerial.snappy:snappy-java:1.1.1.6'
-    compile 'org.apache.commons:commons-lang3:3.3.2'
+    compile 'com.google.guava:guava:18.0'
 }
