--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
             <version>${elasticsearch.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>1.1.1.6</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
