--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,5 @@ dependencies {
     compile 'org.elasticsearch:elasticsearch:1.3.4'
     compile 'org.xerial.snappy:snappy-java:1.1.1.6'
     compile 'com.google.guava:guava:18.0'
-    compile 'org.roaringbitmap:RoaringBitmap:0.4.6'
+    compile 'com.clearspring.analytics:stream:2.7.0'
 }
