--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.elasticsearch:elasticsearch:1.3.4'
+    compile 'com.google.guava:guava:18.0'
     compile 'com.clearspring.analytics:stream:2.7.0'
 }
