--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <name>example-plugin</name>
+    <name>bloomfilter-plugin</name>
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.elasticsearch.plugin.BloomFilter</groupId>
     <artifactId>BloomFilter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <packaging>jar</packaging>
 
     <properties>
-        <elasticsearch.version>1.3.4</elasticsearch.version>
+        <elasticsearch.version>1.4.0</elasticsearch.version>
     </properties>
 
     <dependencies>
